updated top-section and added bottom sections tag

--- a/index.html
+++ b/index.html
@@ -14,8 +14,17 @@
 <body>
 
   <main>
-    <section class="top-section"></section>
-    <section class="bottom-section"></section>
+    <section class="top-section">
+      <img src="./images/image-product-mobile.jpg" alt="">
+    </section>
+    
+    <section class="bottom-section">
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+    </section>
   </main>
   <!-- Perfume
 
