added class names in index plus added root plus styling of the sub-title text

--- a/index.html
+++ b/index.html
@@ -19,30 +19,37 @@
 <body>
 
   <main>
+    
     <section class="top-section">
       <img src="./images/image-product-mobile.jpg" alt="">
     </section>
     
     <section class="bottom-section">
-      <section>
+
+      <section class="sub-title">
         <p>Perfume</p>
       </section>
-      <section>
+
+      <section class="product-name">
         <h1>Gabrielle Essence Eau De Parfum</h1>
       </section>
-      <section>
+
+      <section class="description">
         <p>
           A floral, solar and voluptuous interpretation composed by Olivier Polge, 
           Perfumer-Creator for the House of CHANEL.
         </p>
       </section>
-      <section>
+
+      <section class="price">
         p $149.99
         $169.99
       </section>
-      <section>
+
+      <section class="btn-cart">
         <button>Add to Cart</button>
       </section>
+
     </section>
   </main>
   
