--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <body>
 
   <main>
-    
+
     <section class="top-section">
-      <img src="./images/image-product-mobile.jpg" alt="">
+      <img src="./images/image-product-mobile.jpg" alt="chanel perfume image">
     </section>
     
     <section class="bottom-section">
@@ -42,12 +42,14 @@
       </section>
 
       <section class="price">
-        p $149.99
-        $169.99
+        <p class="current-price">$149.99</p>
+        <p class="discount-price">$169.99</p>
       </section>
 
       <section class="btn-cart">
-        <button>Add to Cart</button>
+        <button>
+          <img src="./images/icon-cart.svg" alt="cart icon image" class="icon-img">Add to Cart
+        </button>
       </section>
 
     </section>
